name:                sum-download
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/k-bx/sum-download#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov <k-bx@k-bx.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sum-download
  hs-source-dirs:      src
  main-is:             Main.hs
  default-extensions:  DeriveGeneric
                     , NoImplicitPrelude
                     , OverloadedLists
                     , OverloadedStrings
                     , PartialTypeSignatures
                     , QuasiQuotes
                     , ScopedTypeVariables
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , blaze-html
                     , classy-prelude
                     , here
                     , lens
                     , safe
                     , string-class
                     , taggy
                     , taggy-lens
                     , text
                     , vector
                     , wreq
